--- a/index.html
+++ b/index.html
@@ -7,34 +7,50 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script>
     $(function () {
       var socket = io();
       $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
-        $('#m').val('');
+        console.log($('#event-name').val());
+        console.log($('#event-data').val());
+        socket.emit('transferdata', {event: $('#public-event-name').val(), data: $('#event-data').val()});
+        $('#event-name').val('');
+        $('#event-data').val('');
         return false;
       });
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
+      socket.on('transferdata', function(msg){
+        $('#messages').append($('<li>').text(JSON.stringify(msg)));
       });
     });
   </script>
     <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      body { font: 13px Helvetica, Arial;  margin: 20px;}
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <div class="row">
+        <div class="col-md-4">
+          <input type="text" id="public-event-name" class="form-control" placeholder="Event name">
+          <br>
+          <input type="text" id="single-event-name" class="form-control" placeholder="Event name">
+        </div>
+        <div class="col-md-4">
+          <textarea class="form-control" name="" id="event-data" cols="30" rows="5" placeholder="Event messages"></textarea>
+        </div>
+        <div class="col-md-4"> 
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="display" style="border: 1px solid; margin-top: 20px; min-height: 500px">
+            <h3>Server broadcasts: </h3>
+            <ul id="messages"></ul>
+          </div>
+        </div>
+      </div>
     </form>
   </body>
 </html>
