--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         return false;
       });
       socket.on('generalData', function(msg){
-        $('#messages').append($('<li>').text(JSON.stringify(msg)));
+        $('#messages').append($('<li>').text('Event: ' + msg.event + ', Data: ' + msg.data));
       });
       socket.on('personalData', function(msg){
-        $('#messages').append($('<li>').text(JSON.stringify(msg)));
+        $('#messages').append($('<li>').text('Event: ' + msg.event + ', Data: ' + msg.data + ', Unique Id: ' + msg.uniqueId));
       });
       socket.emit("add-user", {uniqueId: uniqueId});
     });
@@ -49,7 +49,7 @@
           <label for="">Unique id: <span id="myid"></span> </label>
           <input type="text" id="public-event-name" class="form-control" placeholder="Public event name">
           <br>
-          <input type="text" id="userUniqueId" class="form-control" placeholder="User-level event name">
+          <input type="text" id="userUniqueId" class="form-control" placeholder="User unique id">
         </div>
         <div class="col-md-4">
           <textarea class="form-control" name="" id="event-data" cols="30" rows="5" placeholder="Event messages"></textarea>
@@ -60,8 +60,8 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="display" style="border: 1px solid; margin-top: 20px; min-height: 500px">
-            <h3>Server broadcasts: </h3>
+          <div class="display" style="border: 1px solid; margin-top: 20px; padding: 20px; min-height: 300px">
+            <h6>Server broadcasts: </h6>
             <ul id="messages"></ul>
           </div>
         </div>
