--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="display" style="border: 1px solid; margin-top: 20px; padding: 20px; min-height: 300px">
+          <div class="display" style="border: 1px solid #bbbbbb; margin-top: 20px; padding: 20px; min-height: 300px">
             <h6>Server broadcasts: </h6>
             <ul id="messages"></ul>
           </div>
